--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,7 +2,6 @@ body {
   width: 100vw;
   height: 100vh;
   overflow-x: hidden !important;
-  overflow-y: hidden !important;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -65,6 +64,7 @@ body {
   width: 100%;
   text-align: center;
   padding-top: 10%;
+  padding-bottom: 5%;
 }
 .rangeWrapper {
   width: 100%;
@@ -200,44 +200,46 @@ input[type="range"].kmSlider:focus::-ms-fill-upper {
   align-content: space-around;
 }
 
+.interestsButtonWrapper input{
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
 label {
   background-color: #cccccc;
   color: white;
-  height: 2%;
   border-radius: 20px;
   text-align: center;
-  padding: 8px;
-  min-height: 35px;
-  min-width: 100px;
+  padding: 5%;
+  margin: 2%;
 }
 
 .tickLabel{
-    width: 100%;
+    display: block;
+    width: auto;
 }
 
-.tickbox{
-min-height: 35px;
-min-width: 100px;
-margin: 20px;
-position: absolute;
+.tickBox{
+text-align: center;
+min-width: 30%;
+padding-left: 2px;
+padding-right: 2px;
 }
 
-.categoryCheckBox {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-}
 
 input[type="checkbox"]:checked + label {
   background-color: #82da05;
   color: white;
-  margin: 1%;
-  width: max-content;
-  min-width: 100px;
-  height: 2%;
   border-radius: 20px;
   text-align: center;
-  padding: 8px;
+  padding: 5%;
+  margin: 2%;
+}
+
+.buttonWrapper2{
+    text-align: center;
+    padding-top: 25%;
 }
 
 .card {
