--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,8 +10,9 @@ body {
   width: 40%;
   display: block;
   margin: 0 auto;
-  padding-top: 20%;
+  padding-top: 15%;
 }
+
 .welcomeStage1 {
   text-align: center;
 }
@@ -343,6 +344,21 @@ input[type="checkbox"]:checked + label {
 
 /* Home page */
 
+
+
+
+
+.swipeContainer{
+display: flex;
+flex-wrap: wrap;
+flex-flow: column;
+}
+
+.addJobContainer{
+    width: 100%;
+    height: 15vh;
+}
+
 .addJobButton{
     -webkit-border-radius: 10;
     -moz-border-radius: 10;
@@ -353,13 +369,27 @@ input[type="checkbox"]:checked + label {
     background: #82da05;
     text-align: center;
     width: 40px;
-    height: max-content;
-    position: absolute;
-    right: 8%;
-    top: 5%;
+    height: 40px;
     text-decoration: none;
     font-weight: bold;
     border: none;
+    position: relative;
+    margin-left: 80%;
+    margin-top: 10%;
+}
+
+.logoContainer{
+width: 100%;
+}
+
+.logo2{
+    width: 40%;
+    display: block;
+    margin: 0 auto;
+}
+
+.bottomBar{
+    
 }
 
 .card {
