--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,5 @@
+
+
 body {
   width: 100vw;
   height: 100vh;
@@ -365,17 +367,18 @@ flex-flow: column;
     border-radius: 5px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #ffffff;
-    font-size: 2em;
+    font-size: 1.5em;
     background: #82da05;
     text-align: center;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     text-decoration: none;
     font-weight: bold;
     border: none;
     position: relative;
     margin-left: 80%;
     margin-top: 10%;
+    line-height: 0px;
 }
 
 .logoContainer{
@@ -388,8 +391,36 @@ width: 100%;
     margin: 0 auto;
 }
 
+.stackContainer{
+    margin-top: 5vh;
+    width: 100%;
+    height: 40vh;
+}
+
+.stack {
+    width: 300px;
+    height: 250px;
+    background: #cccccc;
+    position: relative;
+    left: 35%;
+    margin-left: -100px;
+    border-radius: 10px;
+  }
+
 .bottomBar{
-    
+    min-height: 6vh;
+    border-bottom: solid 1px #ccc;
+    border-left: solid 1px #ccc;
+    border-right: solid 1px #ccc;
+    background-color: white;
+}
+
+.cardImage{
+    height: 100%;
+    width: auto;
+    position: relative;
+    min-height: 100%;
+    max-height: 100%;
 }
 
 .card {
@@ -402,19 +433,8 @@ width: 100%;
   top: 0;
   left: 0;
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.2), 1px 1px 1px rgba(0, 0, 0, 0.2);
-  line-height: 300px;
   text-align: center;
-  font-size: 100px;
   box-sizing: border-box;
   cursor: default;
 }
-.stack {
-  width: 300px;
-  height: 250px;
-  background: #ed5d52;
-  position: absolute;
-  top: 200px;
-  left: 35%;
-  margin-left: -100px;
-  border-radius: 10px;
-}
+
