--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -412,12 +412,13 @@ width: 100%;
     margin-top: 5vh;
     width: 100%;
     height: 40vh;
+    margin-bottom: 20%;
 }
 
 .stack {
     width: 80vw;
     position: relative;
-    margin: 0 auto;
+   margin: 0 auto;
   }
 
 .bottomBar{
@@ -437,6 +438,7 @@ width: 100%;
   text-align: center;
   box-sizing: border-box;
   cursor: default;
+  position: absolute;
 }
 
 .cardImage{
