--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -80,7 +80,7 @@ input{
   bottom: 5%;
   text-align: center;
 }
-.welcomeButton {
+.welcomeButton, .submitButton {
   -webkit-border-radius: 10;
   -moz-border-radius: 10;
   border-radius: 10px;
@@ -92,13 +92,18 @@ input{
   text-decoration: none;
   border: none;
 }
-.welcomeButton:hover {
+.welcomeButton:hover{
+  background: #7ac902;
+  text-decoration: none;
+}
+
+.submitButton:hover {
   background: #7ac902;
   text-decoration: none;
 }
 
 /* styling welcome stage 2 */
-.welcomeStage2 {
+.welcomeStage2, .newJobPage {
   display: flex;
   flex-direction: column;
 }
@@ -585,6 +590,64 @@ margin-bottom: 10%;
 
 .acceptRejectImage{
 
+}
+
+/* add job page */
+
+.formHeader{
+  color: #cccccc;
+  font-weight: 320;
+  text-align: left;
+  padding-left: 6%;
+  margin-bottom: 3%;
+}
+
+.jobInput {
+  width: 80%;
+  border: solid 1px #cccccc;
+  padding: 2%;
+  margin-left: 6%;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #222222;
+}
+.jobInput:focus {
+  outline: solid 1px #82da05;
+}
+
+.addressError{
+  text-align: center;
+  color: #9c0909;
+}
+
+.uploadButton{
+  width: 85%;
+  -webkit-border-radius: 10;
+  -moz-border-radius: 10;
+  border-radius: 10px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #ffffff;
+  font-size: 15px;
+  background: #82da05;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  margin-left: 6%;
+  text-decoration: none;
+  border: none;
+}
+
+.pageTitle{
+  color: #868686;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 380;
+  font-size: 2em;
+  width: 100%;
+  text-align: center;
+  padding-top: 15%;
+}
+
+.split{
+  width: 50%;
+  margin: 0 auto;
 }
 
 @media only screen and (min-width: 600px) {
